--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-					<li class="nav-item active"><a href="work.html" class="nav-link">Work</a></li>
+					<li class="nav-item active"><a href="work.html" class="nav-link">Services</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 				</ul>
 			</div>
@@ -71,8 +71,8 @@
 		<div class="container">
 			<div class="row no-gutters slider-text js-fullheight align-items-end">
 				<div class="col-md-9 ftco-animate pb-5 mb-5">
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Work <i class="fa fa-chevron-right"></i></span></p>
-					<h1 class="mb-3 bread">Work</h1>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Service <i class="fa fa-chevron-right"></i></span></p>
+					<h1 class="mb-3 bread">services</h1>
 				</div>
 			</div>
 		</div>
@@ -81,7 +81,7 @@
 	<section class="ftco-section ftco-portfolio">
 		<div class="row justify-content-center no-gutters">
 			<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-				<h2 class="mb-2">Our Works</h2>
+				<h2 class="mb-2">Our Services</h2>
 			</div>
 		</div>
 
@@ -253,7 +253,7 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">I<span>N</span>ER-<span>N</span>ETT</h2>
+						<h2 class="ftco-heading-2">I<span>T</span>-A<span>CA</span>DEMY</h2>
 						<p>We can also be reached on social media..</p>
 						<ul class="ftco-footer-social list-unstyled mt-5">
 							<li class="ftco-animate"><a href="work.html#"><span class="fa fa-twitter"></span></a></li>
@@ -295,8 +295,8 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><a href="work.html#"><span class="icon fa fa-phone"></span><span class="text">+1 (984)233-0238</span></a></li>
-								<li><a href="work.html#"><span class="icon fa fa-envelope pr-4"></span><span class="text">info@inernett.com</span></a></li>
+								<li><a href="work.html#"><span class="icon fa fa-phone"></span><span class="text">+1 (956) 698-9000</span></a></li>
+								<li><a href="work.html#"><span class="icon fa fa-envelope pr-4"></span><span class="text">info@IT-Academy.com</span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -304,7 +304,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">				
-					<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href = "index.html">INNER-NET</a> Designed by Emmanuel Giovanni</p>
+					<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>Designed by  <a href = "#">OZONE TECHNOLOGY</a>.</p>
 					</div>
 				</div>
 			</div>
