--- a/work.html
+++ b/work.html
@@ -97,12 +97,12 @@
 								<div class="px-4 px-lg-4">
 									<div class="desc">
 										<div class="top">
-											<span class="subheading">Web Design</span>
-											<h2 class="mb-2"><a href="work.html">Egos Trade</a></h2>
+											<span class="subheading">IT-Academy</span>
+											<h2 class="mb-2"><a href="work.html">Website Developmet</a></h2>
 										</div>
 										<div class="absolute">
 											<p>We designed a sleek e-commerce site with user-friendly navigation, secure payment processing, and visually appealing product displays, ensuring a seamless shopping experience for customers.</p>
-											<a href="https://www.egostrade.com" style="color:blue" target="_blank">Visit egostrade.com!</a>										
+											<a href="#" style="color:blue" target="_blank">More</a>										
 										</div>
 									</div>
 								</div>
@@ -121,8 +121,8 @@
 								<div class="px-4 px-lg-4">
 									<div class="desc text-md-right">
 										<div class="top">
-											<span class="subheading">Web Design</span>
-											<h2 class="mb-2"><a href="work.html">Africlean</a></h2>
+											<span class="subheading">IT-Academy</span>
+											<h2 class="mb-2"><a href="work.html">Mobile Development</a></h2>
 										</div>
 										<div class="absolute">
 											<p>We developed a clean and professional website for the cleaning company, emphasizing their services, customer testimonials, and contact information to attract and engage potential clients.</p>
@@ -147,8 +147,8 @@
 								<div class="px-4 px-lg-4">
 									<div class="desc">
 										<div class="top">
-											<span class="subheading">Web Design</span>
-											<h2 class="mb-2"><a href="work.html">Glow City</a></h2>
+											<span class="subheading">IT-Academy</span>
+											<h2 class="mb-2"><a href="work.html">Python</a></h2>
 										</div>
 										<div class="absolute">
 											<p>We crafted a stylish website for the hair salon, featuring services, stylist profiles, and appointment scheduling, enhancing their online presence and client interaction.</p>
@@ -173,8 +173,8 @@
 								<div class="px-4 px-lg-4">
 									<div class="desc text-md-right">
 										<div class="top">
-											<span class="subheading">ERP System</span>
-											<h2 class="mb-2"><a href="work.html">Dagi Beauty Art</a></h2>
+											<span class="subheading">IT-Academy</span>
+											<h2 class="mb-2"><a href="work.html">Graphics Design</a></h2>
 										</div>
 										<div class="absolute">
 											<p>We developed an Enterprise Resource Management system, integrating various business processes, data, and analytics into a unified platform, streamlining operations and enhancing efficiency.</p>
@@ -200,8 +200,8 @@
 								<div class="px-4 px-lg-4">
 									<div class="desc">
 										<div class="top">
-											<span class="subheading">Web Portfolio</span>
-											<h2 class="mb-2"><a href="work.html">Henok Wendemu</a></h2>
+											<span class="subheading">IT-Academy</span>
+											<h2 class="mb-2"><a href="work.html">Programing</a></h2>
 										</div>
 										<div class="absolute">
 											<p>We created a well known Ethiopian actor's portfolio website, showcasing their talent with captivating visuals and an easy-to-navigate layout, highlighting their versatility and work.</p>
@@ -226,8 +226,8 @@
 								<div class="px-4 px-lg-4">
 									<div class="desc text-md-right">
 										<div class="top">
-											<span class="subheading">Web Development</span>
-											<h2 class="mb-2"><a href="work.html">Energy Film Production</a></h2>
+											<span class="subheading">IT-Academy</span>
+											<h2 class="mb-2"><a href="work.html">Basic computer</a></h2>
 										</div>
 										<div class="absolute">
 											<p>We designed a dynamic website for the film production company, showcasing their portfolio, team, and upcoming projects, creating an engaging online presence for the industry.</p>
@@ -257,8 +257,8 @@
 						<p>We can also be reached on social media..</p>
 						<ul class="ftco-footer-social list-unstyled mt-5">
 							<li class="ftco-animate"><a href="work.html#"><span class="fa fa-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.linkedin.com/in/icon-digital-59402b243/" target="_blank"><span class="fa fa-linkedin"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.instagram.com/iner_nett/" target="_blank"><span class="fa fa-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="#" target="_blank"><span class="fa fa-linkedin"></span></a></li>
+							<li class="ftco-animate"><a href="#" target="_blank"><span class="fa fa-instagram"></span></a></li>
 						</ul>
 					</div>
 				</div>
