--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Iner-Nett</title>
+  <title>IT-Academy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -22,7 +22,7 @@
   
  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
    <div class="container">
-    <a class="navbar-brand" href="index.html">I<span>N</span>ER-<span>N</span>ETT</a>
+    <a class="navbar-brand" href="index.html">I<span>T</span>-A<span>CA</span>DEMY</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
        <span class="oi oi-menu"></span> Menu
      </button>
@@ -31,7 +31,7 @@
        <ul class="navbar-nav ml-auto">
          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-         <li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
+         <li class="nav-item"><a href="work.html" class="nav-link">Services</a></li>
          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
        </ul>
      </div>
@@ -113,7 +113,7 @@
    <span class="fa fa-phone"></span>
  </div>
  <div class="text">
-   <p><span>Phone:</span> <a href="tel://1234567920">+1 (984)233-0238</a></p>
+   <p><span>Phone:</span> <a href="tel://1234567920">+1 (956) 698-9000</a></p>
  </div>
 </div>
 <div class="dbox w-100 d-flex ftco-animate">
@@ -121,7 +121,7 @@
    <span class="fa fa-paper-plane"></span>
  </div>
  <div class="text">
-   <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@inernett.com</a></p>
+   <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@ITAcademy.com</a></p>
  </div>
 </div>
 <div class="dbox w-100 d-flex ftco-animate">
@@ -129,7 +129,7 @@
    <span class="fa fa-globe"></span>
  </div>
  <div class="text">
-   <p><span>Website</span> <a href="contact.html#">inernett.com</a></p>
+   <p><span>Website</span> <a href="contact.html#">ITAcademy.com</a></p>
  </div>
 </div>
 </div>
@@ -144,7 +144,7 @@
     <div class="row mb-5">
       <div class="col-md">
         <div class="ftco-footer-widget mb-4">
-          <h2 class="ftco-heading-2">I<span>N</span>ER-<span>N</span>ETT</h2>
+          <h2 class="ftco-heading-2">I<span>T</span>-A<span>CA</span>DEMY</h2>
           <p>We can also be reached on social media..</p>
           <ul class="ftco-footer-social list-unstyled mt-5">
             <li class="ftco-animate"><a href="contact.html#"><span class="fa fa-twitter"></span></a></li>
@@ -186,8 +186,8 @@
           <h2 class="ftco-heading-2">Have a Questions?</h2>
           <div class="block-23 mb-3">
             <ul>
-              <li><a href="contact.html#"><span class="icon fa fa-phone"></span><span class="text">+1 (984)233-0238</span></a></li>
-              <li><a href="contact.html#"><span class="icon fa fa-envelope pr-4"></span><span class="text">info@inernett.com</span></a></li>
+              <li><a href="contact.html#"><span class="icon fa fa-phone"></span><span class="text">+1 (956) 698-9000</span></a></li>
+              <li><a href="contact.html#"><span class="icon fa fa-envelope pr-4"></span><span class="text">info@IT-Academy.com</span></a></li>
             </ul>
           </div>
         </div>
@@ -195,7 +195,7 @@
     </div>
     <div class="row">
       <div class="col-md-12 text-center">				
-        <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href = "index.html">INNER-NET</a> Designed by Emmanuel Giovanni</p>
+        <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>Designed by <a href = "index.html">OZONE TECHNOLOGY</a> </p>
         </div>
       </div>
     </div>
