--- a/about.html
+++ b/about.html
@@ -335,7 +335,7 @@
 				<div class="col-md-12 text-center">
 					<p>Copyright &copy;<script>
 							document.write(new Date().getFullYear());
-						</script>Designed by <a href="index.html">IT-Academy</a> </p>
+						</script> Designed by <a href="index.html">OZONE TECHNOLOGY</a> </p>
 				</div>
 			</div>
 		</div>
