--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">				
-					<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> Designed by <a href = "http://ozonetech.et">IT-Academy</a>.</p>
+					<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> Designed by <a href = "http://ozonetech.et">OZONE TECHNOLOGY</a>.</p>
 					</div>
 				</div>
 			</div>
